WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39287
REGRESSION(59637): interpreter build broke
https://bugs.webkit.org/show_bug.cgi?id=39287
Summary
REGRESSION(59637): interpreter build broke
Csaba Osztrogonác
Reported
2010-05-18 05:22:04 PDT
r59637
broke interpreter build, becauase class NativeExecutable is declared in #if ENABLE(JIT) block (JavaScriptCore/runtime/Executable.h), but it is used outside of ENABLE(JIT) block. error message: --------------- In file included from ../../../JavaScriptCore/runtime/Identifier.h:24, from ../../../JavaScriptCore/runtime/Structure.h:29, from ../../../JavaScriptCore/runtime/JSCell.h:30, from ../../../JavaScriptCore/runtime/JSAPIValueWrapper.h:26, from ../../../JavaScriptCore/API/APICast.h:29, from ../../../JavaScriptCore/API/JSBase.cpp:30: ../../../JavaScriptCore/runtime/JSGlobalData.h:182: error: ‘NativeExecutable’ was not declared in this scope ../../../JavaScriptCore/runtime/JSGlobalData.h:182: error: template argument 1 is invalid ../../../JavaScriptCore/runtime/JSGlobalData.h:182: error: template argument 2 is invalid ../../../JavaScriptCore/runtime/JSGlobalData.h:182: error: template argument 5 is invalid ../../../JavaScriptCore/runtime/JSGlobalData.h:184: error: ‘NativeExecutable’ was not declared in this scope ../../../JavaScriptCore/runtime/JSGlobalData.h:184: error: template argument 1 is invalid make[1]: *** [obj/release/JSBase.o] Error 1
Attachments
interpreter fix
(4.18 KB, patch)
2010-05-18 07:08 PDT
,
Gabor Loki
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Loki
Comment 1
2010-05-18 07:08:46 PDT
Created
attachment 56370
[details]
interpreter fix
Gabor Loki
Comment 2
2010-05-18 11:33:38 PDT
Committed revision 59676.
WebKit Review Bot
Comment 3
2010-05-18 12:09:50 PDT
http://trac.webkit.org/changeset/59676
might have broken Qt Linux ARMv5 Release and Qt Linux ARMv7 Release
Csaba Osztrogonác
Comment 4
2010-05-18 12:12:20 PDT
(In reply to
comment #3
)
>
http://trac.webkit.org/changeset/59676
might have broken Qt Linux ARMv5 Release and Qt Linux ARMv7 Release
False positive alarm, it caused by slave lost.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug