Fix the interpreter after r59637 https://bugs.webkit.org/show_bug.cgi?id=39287

Reviewed by Darin Adler.

* runtime/Executable.h:
* runtime/JSFunction.cpp:
(JSC::JSFunction::JSFunction):
(JSC::JSFunction::getCallData):
* runtime/JSGlobalData.cpp:
* runtime/JSGlobalData.h:



Canonical link: https://commits.webkit.org/50812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59676 268f45cc-cd09-0410-ab3c-d52691b4dbfc