JavaScriptCore/runtime/Executable.h
@@ -410,11 +410,13 @@ namespace JSC {
         return m_executable->isHostFunction();
     }
 
+#if ENABLE(JIT)
     inline NativeFunction JSFunction::nativeFunction()
     {
         ASSERT(isHostFunction());
         return static_cast<NativeExecutable*>(m_executable.get())->function();
     }
+#endif
 }
 
 #endif
